--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,9 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App-logo1 {
+  width: auto;
+  height: 15em;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -26,6 +26,10 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.myComponent {
+  margin: 50px;
 }
 
 @keyframes App-logo-spin {
